# tdbase

./: .clang-format  .gitignore  README.md  runtests.sh
data/: nuclei.pt  postgis.sql  vessel.pt  vessel2.pt
docker/: Dockerfile  Dockerfile.bak
script/: latency.sh  postgis.sql  runaccuracy.sh  runtests.sh  runtests_gpu.sh  sync.sh
script/postgis/: create_table.sql  run.sql
src/: CMakeLists.txt  Makefile
src/PPMC/: configuration.h  decomp.cpp  frenetRotation.cpp  frenetRotation.h  mymesh.cpp  mymesh.h  mymeshComp.cpp  mymeshCompTests.cpp  mymeshDecomp.cpp  mymeshIO.cpp  mymeshUtils.cpp  ppmc.cpp  ppmc.h
src/PPMC/rangeCoder/: qsmodel.c  rangecod.c  rangecod.h
src/computational_geometry/: TriDist.cpp  TriDist.cu  TriDist.h
src/depreciated/: SegDist.cu.dep  TriInt.cpp.dep  TriInt.cu  TriInt.cu.dep  compressor.cpp.dep
src/geometry/: SegDist.cpp  SegDist.cu  TriDist.cpp  TriDist.cu  TriDist.h  TriInt.cpp  TriInt.cu  aab.cpp  aab.h  computing_cpu.cpp  computing_gpu.cu  cuda_common.cu  cuda_util.cuh  cuda_util.h  geometry.h  geometry_computer.cpp  int
src/include/: RTree.h  SpatialJoin.h  aab.h  candidate.h  cuda_util.h  geometry.h  himesh.h  index.h  mygpu.h  popl.h  query_context.h  tile.h  util.h
src/index/: RTree.cpp  RTree.h  Skeleton.cpp  Test.cpp  index.h  octree.cpp  skeleton.h  stree.cpp  voxel.cpp
src/ispeed/: iutil.h  mapreduce.cpp  mapreduce.h  queryprocessor.cpp  resque.cpp  resque.hbak  rtree.h
src/join/: DWithinJoin.cpp  DistanceJoin.cpp  IntersectionJoin.cpp  KNNJoin.cpp  SpatialJoin.cpp  SpatialJoin.h  WithinJoin.cpp  tile.cpp  tile.h
src/mymesh/: Facet.cpp  Half_Edge.cpp  develop.cpp  mesh_IO.cpp  mesh_fix.cpp  mymesh.cpp  mymesh.h
src/parser/: H5ToOFF.cpp
src/partition/: octree.cpp  octree.h  partition.cpp  partition.h  sortpartition.cpp
src/postgis/: CMakeLists.txt  config.h  intersection.cpp  main.cpp  nn.cpp  nn_origin.cpp  tables.sql  within.cpp  within_origin.cpp
src/simplifier/: gauland_heckbert.cpp  lindstrom_turk.cpp  openmesh.cpp  wrap.cpp
src/spatial/: RTree.cpp  Skeleton.cpp  himesh.cpp  himesh.h  himesh_3dpro.cpp  himesh_IO.cpp  himesh_aabb.cpp  himesh_box.cpp  himesh_common.cpp  himesh_comp.cpp  himesh_decomp.cpp  himesh_hausdorff.cpp  himesh_query.cpp  himesh_retrieve.cpp  himesh_retrieve_elements.cpp  himesh_skeleton.cpp  himesh_utils.cpp  himesh_wrap.cpp  himesh_wrapper.cpp  index.h  mymesh.cpp  mymeshComp.cpp  mymeshIO.cpp  query_context.cpp  spatial.h  spatial_common.cpp
src/storage/: cache.cpp  cache.h  himesh.cpp  himesh.h  job_sharing.cpp  job_sharing.h  tile.cpp  tile.h  tile_IO.cpp  voxel.cpp  voxel_cache.cpp  voxel_group.cpp
src/test/: H5ToOFF.cpp  Triangle_Compute.cpp  adjust_polyhedron.cpp  compress.cpp  cuda_test.cu  data_generator.cpp  data_generator_wkt.cpp  decompress.cpp  distance.cpp  fixer.cpp  get_boxes.cpp  getoff.cpp  intersection.cpp  joiner.cpp  joiner_test.cpp  kidney_query.cpp  partitioner.cpp  protrudingtest.cpp  single_compress.cpp  skeleton.cpp  spatial.h  test  test.cpp  tiler.cpp  towkt.cpp
src/tools/: 3dpro_toolkit.cpp  H5ToOFF.cpp  cgal.cpp  compressor.cpp  develop.cpp  evaluate.cpp  fixer.cpp  generate_nuclei.cpp  generator.cpp  joiner.cpp  simulator.cpp  simulator_int.cpp  simulator_multi.cpp  tdbase.cpp  test.cpp  test_aabb.cpp  wrap.cpp
src/triangle/: TriDist.cpp  TriDist.cu  TriDist.h
src/util/: util.h
src/voxel/: voxel.cpp  voxel.h
